--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Genart</title>
   </head>
   <body>
-    <div id="main"></div>
+    <div id="elm"></div>
     <script src="/app.js"></script>
   </body>
 </html>
