--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ eval("module.exports = __webpack_require__(/*! ./src/index.js */\"./src/index.js
 
 console.log('here')
 
+console.log('ran here')
 
     </script>
   </body>
