Add view layer with fixed layout: Playground.elm

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Genart</title>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+    </style>
   </head>
   <body>
     <div id="elm"></div>
