Add Parcel, remove webpack dependencies and fix image import

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <div id="elm"></div>
-    <script src="/app.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
