--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,11 @@
             margin: 0;
         }
     </style>
+    <link rel="stylesheet" href="./css/RangeInput.css" />
+    <link rel="stylesheet" href="./css/Transitions.css" />
   </head>
   <body>
     <div id="elm"></div>
-    <script src="/index.js"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
