Rename saved jpeg/svg name to genart and format non-elm files

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <title>Genart</title>
     <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-        }
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+      }
     </style>
     <link rel="stylesheet" href="./css/RangeInput.css" />
     <link rel="stylesheet" href="./css/Transitions.css" />
